Fixed pgp block on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ a:hover {
 }
 
 .gpg {
+    display: inline-block;
     border: none;
     width: 81%;
     background-color: #222831;
